--- a/combatbook.html
+++ b/combatbook.html
@@ -37,47 +37,69 @@ td.brown {
 </style>
 <table border="1" cellspacing="0">
 	<tr>
-		<th colspan="2">Adventurer Melee</th>
+		<th colspan="2">Adventurer Melee Armed</th>
 		<th>PG</th>
 		<th>XR</th>
+
+		<th colspan="2">Adventurer Melee Unarmed</th>
+		<th>PG</th>
+		<th>XR</th>
+
 		<th colspan="2">Adventurer Ranged</th>
 		<th>PG</th>
 		<th>XR</th>
+
 		<th colspan="2">Magical</th>
 		<th>PG</th>
 		<th>XR</th>
+
 		<th colspan="2">Religious</th>
 		<th>PG</th>
 		<th>XR</th>
 	</tr>
 	<tr>
 		<td rowspan="2">Down Swing</td>
+		<td class="orange">Two Handed</td>
+		<td></td>
+		<td></td>
+
+		<td rowspan="2">Slugger</td>
 		<td class="orange">Bash</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="2">Down Swing</td>
 		<td class="orange">&nbsp;</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="2">Down Swing</td>
 		<td class="orange">&nbsp;</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="2">Down Swing</td>
 		<td class="orange">&nbsp;</td>
 		<td></td>
 		<td></td>
 	</tr>
 	<tr>
+		<td class="orange">One Handed</td>
+		<td></td>
+		<td></td>
+
 		<td class="orange">Smash</td>
 		<td></td>
 		<td></td>
+
 		<td class="orange">Smash</td>
 		<td></td>
 		<td></td>
+
 		<td class="orange">Smash</td>
 		<td></td>
 		<td></td>
+
 		<td class="orange">Smash</td>
 		<td></td>
 		<td></td>
@@ -87,14 +109,22 @@ td.brown {
 		<td class="orange">Strong</td>
 		<td></td>
 		<td></td>
-		<td rowspan="3">Kicks</td>
-		<td class="orange">Heavy</td>
+
+		<td rowspan="3">Kick</td>
+		<td class="orange">Strong</td>
 		<td></td>
 		<td></td>
+
+		<td rowspan="3">Kick</td>
+		<td class="orange">Strong</td>
+		<td></td>
+		<td></td>
+
 		<td rowspan="3">Side Swing</td>
 		<td class="orange">Strong</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="3">Side Swing</td>
 		<td class="orange">Strong</td>
 		<td></td>
@@ -104,12 +134,19 @@ td.brown {
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
@@ -118,12 +155,19 @@ td.brown {
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
@@ -133,14 +177,22 @@ td.brown {
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
+		<td rowspan="2">Strike</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+
 		<td rowspan="2">Thrust Bow or Arrow</td>
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="2">Thrust</td>
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="2">Thrust</td>
 		<td class="red">High</td>
 		<td></td>
@@ -150,12 +202,19 @@ td.brown {
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
@@ -165,14 +224,22 @@ td.brown {
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
+		<td rowspan="4">Feint</td>
+		<td class="red">High</td>
+		<td></td>
+		<td></td>
+
 		<td rowspan="2">Swing Bow</td>
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="4">Feint</td>
 		<td class="red">High</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="4">Feint</td>
 		<td class="red">High</td>
 		<td></td>
@@ -182,12 +249,19 @@ td.brown {
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
+
+		<td class="blue">Low</td>
+		<td></td>
+		<td></td>
+
 		<td class="blue">Low</td>
 		<td></td>
 		<td></td>
@@ -196,13 +270,20 @@ td.brown {
 		<td class="blue">Side Swing</td>
 		<td></td>
 		<td></td>
+
+		<td class="blue">Kick</td>
+		<td></td>
+		<td></td>
+
 		<td rowspan="2">Single Shot</td>
 		<td class="blue">Sniping Shot</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Side Swing</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Side Swing</td>
 		<td></td>
 		<td></td>
@@ -211,12 +292,19 @@ td.brown {
 		<td class="red">Thrust</td>
 		<td></td>
 		<td></td>
+
+		<td class="red">Strike</td>
+		<td></td>
+		<td></td>
+
 		<td class="red">Snapshot</td>
 		<td></td>
 		<td></td>
+
 		<td class="red">Thrust</td>
 		<td></td>
 		<td></td>
+
 		<td class="red">Thrust</td>
 		<td></td>
 		<td></td>
@@ -226,14 +314,22 @@ td.brown {
 		<td class="orange">Down Swing</td>
 		<td></td>
 		<td></td>
+
+		<td rowspan="3">Defensive Attacks</td>
+		<td class="orange">Strong</td>
+		<td></td>
+		<td></td>
+
 		<td rowspan="3">Aimed Shots</td>
 		<td class="orange">Careful Shot</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="3">Protected Attacks</td>
 		<td class="orange">Down Swing</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="3">Protected Attacks</td>
 		<td class="orange">Down Swing</td>
 		<td></td>
@@ -243,12 +339,19 @@ td.brown {
 		<td class="blue">Side Swing</td>
 		<td></td>
 		<td></td>
+
+		<td class="blue">Kick</td>
+		<td></td>
+		<td></td>
+
 		<td class="blue">Aimed Low</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Side Swing</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Side Swing</td>
 		<td></td>
 		<td></td>
@@ -257,12 +360,19 @@ td.brown {
 		<td class="red">Thrust</td>
 		<td></td>
 		<td></td>
+
+		<td class="red">Strike</td>
+		<td></td>
+		<td></td>
+
 		<td class="red">Aimed High</td>
 		<td></td>
 		<td></td>
+
 		<td class="red">Thrust</td>
 		<td></td>
 		<td></td>
+
 		<td class="red">Thrust</td>
 		<td></td>
 		<td></td>
@@ -272,14 +382,22 @@ td.brown {
 		<td class="blue">Kick</td>
 		<td></td>
 		<td></td>
+
+		<td rowspan="4">Special</td>
+		<td class="blue">Trip</td>
+		<td></td>
+		<td></td>
+
 		<td rowspan="4">Special</td>
 		<td class="blue">Kick</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="4">Special</td>
 		<td class="blue">Kick</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="4">Special</td>
 		<td class="blue">Kick</td>
 		<td></td>
@@ -289,12 +407,19 @@ td.brown {
 		<td class="yellow">Wild Swing</td>
 		<td></td>
 		<td></td>
+
 		<td class="yellow">Wild Swing</td>
 		<td></td>
 		<td></td>
+
 		<td class="yellow">Wild Swing</td>
 		<td></td>
 		<td></td>
+
+		<td class="yellow">Wild Swing</td>
+		<td></td>
+		<td></td>
+
 		<td class="yellow">Wild Swing</td>
 		<td></td>
 		<td></td>
@@ -303,12 +428,19 @@ td.brown {
 		<td class="blue">Dislodge Weapon</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Dislodge Weapon</td>
 		<td></td>
 		<td></td>
+
 		<td class="blue">Dislodge Weapon</td>
 		<td></td>
 		<td></td>
+
+		<td class="blue">Dislodge Weapon</td>
+		<td></td>
+		<td></td>
+
 		<td class="blue">Dislodge Weapon</td>
 		<td></td>
 		<td></td>
@@ -317,12 +449,19 @@ td.brown {
 		<td class="green">Retrieve Weapon</td>
 		<td></td>
 		<td></td>
+
+		<td class="green">&nbsp;</td>
+		<td></td>
+		<td></td>
+
 		<td class="green">Retrieve Weapon</td>
 		<td></td>
 		<td></td>
+
 		<td class="green">Retrieve Weapon</td>
 		<td></td>
 		<td></td>
+
 		<td class="green">Retrieve Weapon</td>
 		<td></td>
 		<td></td>
@@ -332,14 +471,22 @@ td.brown {
 		<td class="green">High</td>
 		<td></td>
 		<td></td>
+
+		<td rowspan="2">Forearm Block</td>
+		<td class="green">High</td>
+		<td></td>
+		<td></td>
+
 		<td rowspan="2">&nbsp;</td>
 		<td class="green"></td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="2">Shield Block</td>
 		<td class="green">High</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="2">Shield Block</td>
 		<td class="green">High</td>
 		<td></td>
@@ -349,12 +496,19 @@ td.brown {
 		<td class="green">Low</td>
 		<td></td>
 		<td></td>
+
+		<td class="green">Low</td>
+		<td></td>
+		<td></td>
+
 		<td class="green"></td>
 		<td></td>
 		<td></td>
+
 		<td class="green">Low</td>
 		<td></td>
 		<td></td>
+
 		<td class="green">Low</td>
 		<td></td>
 		<td></td>
@@ -364,14 +518,22 @@ td.brown {
 		<td class="green">Up</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="4">Jump</td>
 		<td class="green">Up</td>
 		<td></td>
 		<td></td>
+
 		<td rowspan="4">Jump</td>
 		<td class="green">Up</td>
 		<td></td>
 		<td></td>
+
+		<td rowspan="4">Jump</td>
+		<td class="green">Up</td>
+		<td></td>
+		<td></td>
+
 		<td rowspan="4">Jump</td>
 		<td class="green">Up</td>
 		<td></td>
@@ -381,12 +543,19 @@ td.brown {
 		<td class="yellow">Dodge</td>
 		<td></td>
 		<td></td>
+
 		<td class="yellow">Dodge</td>
 		<td></td>
 		<td></td>
+
 		<td class="yellow">Dodge</td>
 		<td></td>
 		<td></td>
+
+		<td class="yellow">Dodge</td>
+		<td></td>
+		<td></td>
+
 		<td class="yellow">Dodge</td>
 		<td></td>
 		<td></td>
@@ -395,12 +564,19 @@ td.brown {
 		<td class="green">Duck</td>
 		<td></td>
 		<td></td>
+
 		<td class="green">Duck</td>
 		<td></td>
 		<td></td>
+
 		<td class="green">Duck</td>
 		<td></td>
 		<td></td>
+
+		<td class="green">Duck</td>
+		<td></td>
+		<td></td>
+
 		<td class="green">Duck</td>
 		<td></td>
 		<td></td>
@@ -409,12 +585,19 @@ td.brown {
 		<td class="yellow">Away</td>
 		<td></td>
 		<td></td>
+
 		<td class="yellow">Away</td>
 		<td></td>
 		<td></td>
+
 		<td class="yellow">Away</td>
 		<td></td>
 		<td></td>
+
+		<td class="yellow">Away</td>
+		<td></td>
+		<td></td>
+
 		<td class="yellow">Away</td>
 		<td></td>
 		<td></td>
@@ -424,14 +607,22 @@ td.brown {
 		<th></th>
 		<th></th>
 		<th></th>
+
 		<th>XR Manuevers</th>
 		<th></th>
 		<th></th>
 		<th></th>
+
 		<th>XR Manuevers</th>
 		<th></th>
 		<th></th>
 		<th></th>
+
+		<th>XR Manuevers</th>
+		<th></th>
+		<th></th>
+		<th></th>
+
 		<th>XR Manuevers</th>
 		<th></th>
 		<th></th>
@@ -442,14 +633,22 @@ td.brown {
 		<td class="white">Charge</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="white">Charge</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="white">Charge</td>
 		<td></td>
 		<td></td>
+
+		<td></td>
+		<td class="white">Charge</td>
+		<td></td>
+		<td></td>
+
 		<td></td>
 		<td class="white">Charge</td>
 		<td></td>
@@ -460,14 +659,22 @@ td.brown {
 		<td class="black">Swing High</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="black">Swing High</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="black">Swing High</td>
 		<td></td>
 		<td></td>
+
+		<td></td>
+		<td class="black">Swing High</td>
+		<td></td>
+		<td></td>
+
 		<td></td>
 		<td class="black">Swing High</td>
 		<td></td>
@@ -478,14 +685,22 @@ td.brown {
 		<td class="black">Swing Low</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="black">Swing Low</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="black">Swing Low</td>
 		<td></td>
 		<td></td>
+
+		<td></td>
+		<td class="black">Swing Low</td>
+		<td></td>
+		<td></td>
+
 		<td></td>
 		<td class="black">Swing Low</td>
 		<td></td>
@@ -496,14 +711,22 @@ td.brown {
 		<td class="white">Thrust High</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="white">Thrust High</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="white">Thrust High</td>
 		<td></td>
 		<td></td>
+
+		<td></td>
+		<td class="white">Thrust High</td>
+		<td></td>
+		<td></td>
+
 		<td></td>
 		<td class="white">Thrust High</td>
 		<td></td>
@@ -514,14 +737,22 @@ td.brown {
 		<td class="white">Thrust Low</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="white">Thrust Low</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="white">Thrust Low</td>
 		<td></td>
 		<td></td>
+
+		<td></td>
+		<td class="white">Thrust Low</td>
+		<td></td>
+		<td></td>
+
 		<td></td>
 		<td class="white">Thrust Low</td>
 		<td></td>
@@ -532,14 +763,22 @@ td.brown {
 		<td class="brown">Block & Close</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="brown">Block & Close</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="brown">Block & Close</td>
 		<td></td>
 		<td></td>
+
+		<td></td>
+		<td class="brown">Block & Close</td>
+		<td></td>
+		<td></td>
+
 		<td></td>
 		<td class="brown">Block & Close</td>
 		<td></td>
@@ -550,14 +789,22 @@ td.brown {
 		<td class="brown">Dodge</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="brown">Dodge</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="brown">Dodge</td>
 		<td></td>
 		<td></td>
+
+		<td></td>
+		<td class="brown">Dodge</td>
+		<td></td>
+		<td></td>
+
 		<td></td>
 		<td class="brown">Dodge</td>
 		<td></td>
@@ -568,14 +815,22 @@ td.brown {
 		<td class="brown">Jump Back</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="brown">Jump Back</td>
 		<td></td>
 		<td></td>
+
 		<td></td>
 		<td class="brown">Jump Back</td>
 		<td></td>
 		<td></td>
+
+		<td></td>
+		<td class="brown">Jump Back</td>
+		<td></td>
+		<td></td>
+
 		<td></td>
 		<td class="brown">Jump Back</td>
 		<td></td>
