--- a/fwcharacter.html
+++ b/fwcharacter.html
@@ -1,245 +1,141 @@
-
-<!-- saved from url=(0044)http://www.markjlyon.com/fw/fwcharacter.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-</head>
-<body>
-	<style>body,table,tr,td,input{font:normal 9pt Tahoma;}</style>
-	<input type="text" id="player" value=""><br>
-	<br>
-	<input type="submit" value="Submit" onclick="createRolls();return null;"><br>
-	<script>
-	var rolls = 0;
-
-	function createRolls() {
-		var numSets=1;
-		rolls+=1;
-		var player = document.getElementById("player").value;
-		document.body.innerHTML = "";
-		document.writeln("<body>");
-		document.writeln("<style>body,table,tr,td,input{font:normal 8pt Tahoma}.outlineGood{color: black;-webkit-text-fill-color: white;-webkit-text-stroke-width: 1px;-webkit-text-stroke-color: black;}.outlineBad{color: black;-webkit-text-fill-color: red;-webkit-text-stroke-width: 1px;-webkit-text-stroke-color: black;}</style>");
-		document.writeln("<input type='text' id='player' value='" + player + "'/></br>");
-		document.writeln("<br/>");
-		document.writeln("<input type='submit' value='Submit (Tries : " + rolls + ")' onclick='createRolls();return null;'/><br/>");
-		document.writeln("<br/>");
-		document.writeln("<table border='0' cellpadding='4' cellspacing='0' style='width:100%;'>");
-		for(var i=1;i<=numSets;i++) {
-			document.writeln("<tr style='background-color:" + background(i) + "'>");
-			document.writeln("<td>"+i+"</td>");
-			rollAttrSet();
-			document.writeln("</tr>");
-		}
-		document.writeln("</table>");
-		document.writeln("<br/>");
-		document.writeln("<a id='downloadlink'>Click to save as HTML</a>");
-		var b = document.body.innerHTML;
-		var a = document.getElementById('downloadlink');
-		a.setAttribute('download', player + '.html');
-		a.setAttribute('href', 'data:text/html;charset=UTF-8,'+b);
-		document.writeln("</body>");
-	}
-
-	function downloadRolls() {
-	}
-
-	function background(n) {
-		return n % 2 == 0 ? "#F0F0F0" : "#FFFFCC"; 
-	}
-
-	function rollAttrSet() {
-		var dice = 4;
-		var physique = roll(dice);
-		var agility = roll(dice);
-		var endurance = roll(dice);
-		var weightMale = (30+(endurance*10));
-		var weightFemale = (10+(endurance*10));
-		var intelligence = roll(dice);
-		var faith = roll(dice);
-		var charisma = roll(dice);
-		var appearance = roll(dice);
-		var bravery = roll(dice);
-		var socialclass = 11;
-		var leadership = ((2*charisma)+(appearance)+(physique)+(intelligence)+(bravery)+(4*socialclass))/10;
-		var greed = roll(dice);
-		var selfishness = roll(dice);
-		var lust = roll(dice);
-		var bonus = die(1,6)+die(1,6)-7;
-		formatAttr("Phy [" + (53+physique).formatInchesToFeetAndInches() + "/" + (55+physique).formatInchesToFeetAndInches() + "]",physique);
-		formatAttr("Agi",agility);
-		formatAttr("End [" + weightFemale + "lbs/" + weightMale + "lbs]",endurance);
-		document.writeln("<td>|</td>");
-		formatAttr("Int",intelligence);
-		formatAttr("Faith",faith);
-		document.writeln("<td>|</td>");
-		formatAttr("Cha",charisma);
-		formatAttr("App",appearance);
-		formatAttr("Bra",bravery);
-		document.writeln("<td>|</td>");
-		formatAttr("SC",socialclass);
-		document.writeln("<td>|</td>");
-		formatAttr("Lead",leadership.toFixed(1));
-		document.writeln("<td>|</td>");
-		formatAttr("Greed",greed);
-		formatAttr("Self",selfishness);
-		formatAttr("Lust",lust);
-		document.writeln("<td>|</td>");
-		formatAttr("Bonus",bonus);
-		var numBogeys = die(1,3);
-		var bogeyCount = 0;
-		var bogeys = [];
-		var extraFlag = false;
-		for(var i=1;i<=numBogeys;i++) {
-			extraFlag = false;
-			var r = die(1,100);
-			bogeyCount+=1;
-			if (r>=(100-bogey.length+1)) {
-				if(bogey[r-(100-bogey.length+1)]=='Roll an additional 1d3 bogeys'){
-					extraFlag = true;
-					var addRolls=die(1,3);
-					numBogeys+=addRolls;
-				}
-				document.writeln("<tr><td></td><td colspan=50>Bogey " + bogeyCount + " (" + r + ") : " + bogey[r-(100-bogey.length+1)] + ((extraFlag) ? " (roll was "+ addRolls + ")" : "") + "</td></tr>");
-			} else {
-				document.writeln("<tr><td></td><td colspan=50>Bogey " + bogeyCount + " (" + r + ") : Roll resulted in nothing.</td></tr>");
+<!doctype html>
+<html>
+    <head>
+        <script src='socket.io.js'></script>
+        <script src='knockout-3.4.2.js'></script>
+		<style>body,table,tr,td,input{font:normal 9pt Tahoma;}th,td{text-align:center;}</style>
+    </head>
+    <body>
+		<input type="text" id="player" value=""><br>
+		<br>
+		<input type="submit" value="Submit" onclick="roll();"><br>
+		<table data-bind="if: player" cellspacing="4">
+			<tr>
+				<th>Phyisque</th>
+				<th>Agility</th>
+				<th>Endurance</th>
+				<th>&nbsp;</th>
+				<th>Intelligence</th>
+				<th>Faith</th>
+				<th>&nbsp;</th>
+				<th>Charisma</th>
+				<th>Appearance</th>
+				<th>Bravery</th>
+				<th>&nbsp;</th>
+				<th>SocialClass</th>
+				<th>Leadership</th>
+				<th>&nbsp;</th>
+				<th>Greed</th>
+				<th>Selfishness</th>
+				<th>Lust</th>
+				<th>&nbsp;</th>
+				<th>Bonus</th>
+			</tr>
+			<tr>
+				<td data-bind="text: physique"></td>
+				<td data-bind="text: agility"></td>
+				<td data-bind="text: endurance"></td>
+				<td></td>
+				<td data-bind="text: intelligence"></td>
+				<td data-bind="text: faith"></td>
+				<td></td>
+				<td data-bind="text: charisma"></td>
+				<td data-bind="text: appearance"></td>
+				<td data-bind="text: bravery"></td>
+				<td></td>
+				<td data-bind="text: socialclass"></td>
+				<td data-bind="text: leadership"></td>
+				<td></td>
+				<td data-bind="text: greed"></td>
+				<td data-bind="text: selfishness"></td>
+				<td data-bind="text: lust"></td>
+				<td></td>
+				<td data-bind="text: bonus"></td>
+			</tr>
+		</table>
+		<table data-bind="if: player">
+			<thead>
+				<tr>
+					<th style="text-align:left;">Bogey(s)</th>
+				</tr>
+			</thead>
+			<tbody data-bind="foreach: bogeys">
+			    <tr>
+					<td style="text-align:left;" data-bind="text: bogey"></td>
+				</tr> 
+			</tbody>
+		</table>
+		<br/>
+		<div id="result" data-bind="ifnot: player">
+		</div>
+        <ul id='messages'></ul>
+        <script>
+			var socket = io.connect('http://localhost:88');
+			
+			socket.on('err', function(data){
+				var r = document.getElementById('result');
+				pcVM.player(null);
+				r.innerHTML = data.message;
+			});
+			
+			socket.on('result', function(data){
+				pcVM.player(data.player);
+				pcVM.physique(data.physique);
+				pcVM.heightFemale(data.heightFemale);
+				pcVM.heightMale(data.maleHeight);
+				pcVM.agility(data.agility);
+				pcVM.endurance(data.endurance);
+				pcVM.weightFemale(data.weightFemale);
+				pcVM.weightMale(data.weightMale);
+				pcVM.intelligence(data.intelligence);
+				pcVM.faith(data.faith);
+				pcVM.charisma(data.charisma);
+				pcVM.appearance(data.appearance);
+				pcVM.bravery(data.bravery);
+				pcVM.socialclass(data.socialclass);
+				pcVM.leadership(data.leadership);
+				pcVM.greed(data.greed);
+				pcVM.selfishness(data.selfishness);
+				pcVM.lust(data.lust);
+				pcVM.bonus(data.bonus);
+				pcVM.bogeys(data.bogeys);
+			});
+			
+			function roll() {
+				var p = document.getElementById('player').value;
+				socket.emit('roll',{player:p});
 			}
-		}
-	}
 
-	function roll(n) {
-		var a = Array(n);
-		for (var i = 0; i < n; i++)
-			a[i] = Math.floor(Math.random() * 6) + 1;
-		a = a.sort().slice(n - 3, n);
-		return a[0] + a[1] + a[2];
-	}
-
-	function die(min, max) {
-		return Math.round((Math.random() * (max - min) + min));
-	}
-
-	function formatAttr(attr, n) {
-		var font = "";
-		var cls = "";
-		if ((n>=15 && n<=18) && (attr!="Greed" && attr!="Self" && attr!="Lust" && attr!="Bonus")) {
-			font="font-weight:bold;text-decoration:none;";
-		} else if ((n>=3 && n<=6) && (attr!="Greed" && attr!="Self" && attr!="Lust" && attr!="Bonus")) {
-			font="font-weight:bold;color:red;";
-		} else if ((n>=15 && n<=18)) {
-			font="font-weight:bold;color:red;";
-		} else if ((n>=3 && n<=6) && (attr!="Greed" && attr!="Self" && attr!="Lust" && attr!="Bonus")) {
-			font="font-weight:bold;text-decoration:none;";
-		} else {
-			font="font-weight:normal;color:#000000;";
-		}
-		if (attr == "Phy" || attr == "End") font += "width:100px;";
-		if (attr == "Lead") font += "text-decoration:underline;";
-		document.writeln("<td>"+attr+" :</td><td align='right' style='" + font + "'>"+n+"</td>");
-	}
-
-	Number.prototype.pad = function(size) {
-		var s = String(this);
-		while (s.length < (size || 2)) {s = "0" + s;}
-		return s;
-    }
-
-	Number.prototype.formatInchesToFeetAndInches = function() {
-		var inches = this;
-		var feet = Math.floor(inches/12).toFixed(0);
-		inches%=12;
-		return feet + "'" + inches + "\"";
-	}
-	
-	var bogey = [
-		"Red Hair : +2 Charisma, +2 Appearance, +2 Bravery, +2 Leadership; you have been touched by the gods; you ignore Ugly or Repulsive",
-		"Inept Climber : You can't climb, the best you can do is hold yourself in position",
-		"Talented Climber : +2 to all Climbing checks and you climb well",
-		"Inept Rider : You can't rind any animal, the best you can do is sit on a mount",
-		"Talented Rider :  +2 to all Riding checks and you ride well",
-		"Inept Singer : You can't sing at all and not for magical or religious purposes",
-		"Talented Singer : +2 to all Singing checks and you sing well",
-		"Inept Swimmer : You can't swim and begin to drown as soon as you enter water",
-		"Talented Swimmer : +2 to all Swimming checks and you swim well",
-		"Inept Thief : You can't steal and are always seen or caught when making any thieving attempt",
-		"Talented Thief : +2 to all Stealing checks and you steal well",
-		"Inept Tracker : You can't track anything ever",
-		"Talented Tracker : +2 to all Tracking checks and you track well",
-		"Artless Adventurer : You are not able to take combat levels",
-		"Gifted Adventurer : +2 to all combat rolls and rolls to overcome obstacles, you require 1 additional point of damage to be scored to suffer negative effects in combat and never suffer from any specific negative combat effect for longer than 1 round",
-		"Artless Magician : You are not able to take magic levels",
-		"Gifted Magician : +2 to all magic rolls, you regain mana at double the normal rate",
-		"Artless Miracleworker : You are not able to take religious levels",
-		"Gifted Miracleworker : +2 to all religious rolls, piety gains are doubled and piety losses are halved", 
-		"Weak : -2 Physique",
-		"Strong : +2 Physique",
-		"Clumsy : -2 Agility",
-		"Agile : +2 Agility",
-		"Sickly : -2 Endurance",
-		"Healthy : +2 Endurance",
-		"Dull : -2 Intelligence",
-		"Sharp : +2 Intelligence",
-		"Faithless : -2 Faith",
-		"Devout : +2 Faith",
-		"Shy : -2 Charisma",
-		"Affable : +2 Charisma",
-		"Ugly : -2 Appearance",
-		"Beautiful : +2 Appearance",
-		"Craven : -2 Bravery",
-		"Fearless : +2 Bravery",
-		"Miserly : +2 Greed",
-		"Generous : -2 Greed",
-		"Narcissistic : +2 Selfishness",
-		"Altruistic : -2 Selfishness",
-		"Wanton : +2 Lust",
-		"Chaste : -2 Lust",
-		"Pariah : -2 Leadership",
-		"Influential : +2 Leadership",
-		"Susceptibility to Alcohol : All alcohol, drugs, narcotics, and poisons take half as much to affect you, half the normal time to affect you, last twice as long, and have double any numerical effects",
-		"Resistance to Alcohol : All alcohol, drugs, narcotics, and poisons take twice as much to affect you, take twice as long to affect you, last half as long, and have half any numerical effects",
-		"Susceptibility to Fatigue : You take half as long to get fatigued and take twice as long to recover from fatigue",
-		"Resistance to Fatigue : You take twice as long to get fatigued and take half as long to recover from fatigue",
-		"Susceptibility to Infection : You are highly susceptable to illness and infection",
-		"Resistance to Infection : You are highly resistance to illness and infection",
-		"Susceptibiity to Pain : All damage received is considered doubled (but not actually doubled) but only for the purposes of remaining conscious or resisting torture",
-		"Resistance to Pain : Take half damage (round up) from all sources",
-		"Poor Eyesight : -2 Agility, cannot read or see anything clearly beyond 30 feet",
-		"Keen Eyesight : You can see twice as far as normal, 50% chance to spot concealed things within 30 feet, immune to visual illusions",
-		"Poor Hearing : You can only hear the loudest noises and you never whisper",
-		"Keen Hearing : You can hear twice as far as normal, 50% change to hear concealed things within 30 feet, immune to auditory illusions",
-		"Poor Smell : You can only smell overwhelming odors",
-		"Keen Smell : You can identify famililar things by smell, 50% chance to smell concealed things with a familiar or strong odor within 30 ft, immune to olfactory illusions",
-		"Insomnia : Fitful sleeper, always tired, difficult to surprise while sleeping",
-		"Like a Log : Sound sleeper able to sleep anywhere under any conditions, very easy to surprise while sleeping",
-		"Belligerent : -2 Leadership, takes offense at any and all criticism",
-		"Born Leader : +2 Leadership, never takes offense",
-		"Weak Mind : Always fails morale and control tests",
-		"Strong Mind : Never fails morale or control tests",
-		"Bad Luck : -1 on all Luck rolls",
-		"Good Luck : +1 on all Luck rolls",
-		"Bad with Animals : Animals (non-sentient) do not like you, you cannot own pets, mounts are difficult for you to control, you can never ride well",
-		"Good with Animals : Animals (non-sentient) really like you, you easily own pets and can teach them tricks, mounts easily trust and obey you, you can ride and ride well",
-		"Inoffensive : You have difficulty inspiring Anger in others, oppoents you target for Anger control tests have a +4 Bravery for the attempt",
-		"Taunting : You can easily inspire Anger in others, opponents you target for Anger control tests have a -4 Bravery for the attempt",
-		"Bumbler : You have difficulty inspiring Greed in others, opponents you target for Greed control tests have a -4 Greed for the attempt",
-		"Grifter : You can easily inspire Greed in others, opponents you target for Greed control tests have a +4 Greed for the attempt",
-		"Repulsive : You have difficulty inspiring Lust in others, opponents you target for Lust control tests have a -4 Lust for the attempt",
-		"Seductive : You can easily inspire Lust in others, opponents you target for Lust control tests have a +4 Lust for the attempt",
-		"Selfishness Penalty : You have difficulty inspiring Selfishness in others, opponents you target for Selfishness control tests have a -4 Selfishness for the attempt",
-		"Selfishness Bonus : You can easily inspire Selfishness in others, opponents you target for Selfishness control tests have a +4 Selfishness for the attempt",
-		"Haunted : You are haunted by ghosts",
-		"Medium : You can see and speak to ghosts",
-		"Obsessive Gambler : You will never refuse to bet or game",
-		"Sense of Location : You always know true north and your position relative to previous places",
-		"Oblivious : You have trouble following activity that is going one around you, you always go last",
-		"Aware : You are always able to follow activity that is going on around you, you always go frst",
-		"Kleptomania : You always steal small things and must succeed in a Greed control test to keep from stealing any small worthless items around you",
-		"Gift of Tongues : You can learn or decipher any written or spoken language or page of inscriptions within a day, you can automatically read and write well, and you can start as a scholar",
-		"Psychopath : You enjoy killing so much that must succeed in a Selfishness control test to keep from killing opponents, captives, or anyone that is helpless",
-		"Healing Hands : Once per day you can heal 1d6 Endurance on a single target you touch",
-		"Phobia : Fear of water, heights, spiders, or snakes so you either can't swim or climb, or you are paralyzed with fear or flee in terror from spiders or snakes",
-		"Oracle : As long as you faithfully serve a god or goddess you have been chosen as one of their oracles, you can answer any questions that prove you speak for your god or goddess, and the god or goddess automatically grants all miracles that further their prophecies",
-		"Persecuted : Something about you causes people to target you for verbal and physical violence, you are usually the go to target for verbal or physical abuse",
-		"Roll an additional 1d3 bogeys",
-		"Something Abhorrent (GM may or may not tell you)",
-		"Something Wonderful (GM may or may not tell you)"
-	];
-	</script>
-</body></html>
+			function background(n) {
+				return n % 2 == 0 ? "#F0F0F0" : "#FFFFCC"; 
+			}
+			
+			function pcViewModel() {
+				var self = this;
+				self.player = ko.observable();
+				self.physique = ko.observable();
+				self.heightFemale = ko.observable();
+				self.heightMale = ko.observable();
+				self.agility = ko.observable();
+				self.endurance = ko.observable();
+				self.weightFemale = ko.observable();
+				self.weightMale = ko.observable();
+				self.intelligence = ko.observable();
+				self.faith = ko.observable();
+				self.charisma = ko.observable();
+				self.appearance = ko.observable();
+				self.bravery = ko.observable();
+				self.socialclass = ko.observable();
+				self.leadership = ko.observable();
+				self.greed = ko.observable();
+				self.selfishness = ko.observable();
+				self.lust = ko.observable();
+				self.bonus = ko.observable();
+				self.bogeys = ko.observableArray([]);
+			}
+			
+			var pcVM = new pcViewModel();
+			ko.applyBindings(pcVM);
+		</script>
+    </body>
+</html>
